@@ -1,5 +1,6 @@
 2013-07-24 pchang9@cs.wisc.edu
 	* moz#896301 Wasted work in SfxEntry::checkword
+	* moz#896844 Wasted work in AffixMgr::defcpd_check
 
 2013-06-13 Konstantin Khlebniko
 	* #49 HashMgr::add_word computes wrong size for struct hentry
